WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262070
REGRESSION (
268069@main
): [iOS] Date picker fails to present after dismissing with Done button
https://bugs.webkit.org/show_bug.cgi?id=262070
Summary
REGRESSION (268069@main): [iOS] Date picker fails to present after dismissing...
Wenson Hsieh
Reported
2023-09-25 14:14:41 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-09-25 14:58:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18190
EWS
Comment 2
2023-09-25 18:33:27 PDT
Committed
268425@main
(c9ac0cb7dfab): <
https://commits.webkit.org/268425@main
> Reviewed commits have been landed. Closing PR #18190 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-09-25 18:34:13 PDT
<
rdar://problem/116027922
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug