Source/WebKit/UIProcess/ios/forms/WKDatePickerPopoverController.h
@@ -39,6 +39,7 @@
 @interface WKDatePickerPopoverController : UIViewController
 - (instancetype)initWithDatePicker:(UIDatePicker *)datePicker delegate:(id<WKDatePickerPopoverControllerDelegate>)delegate;
 - (void)presentInView:(UIView *)view sourceRect:(CGRect)rect interactionBounds:(CGRect)interactionBounds completion:(void(^)())completion;
+- (void)dismissDatePicker;
 @end
 
 #endif // PLATFORM(IOS_FAMILY)
